--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,6 +1,10 @@
 /*Tablet Style Changes*/
 @media screen and (max-width: 950px) {
 
+  nav {
+    text-align: right;
+  }
+
   nav ul {
     display: none;
   }
@@ -39,16 +43,24 @@
   }
 
   /*Set text size*/
+  main {
+    font-size: 1rem;
+  }
+
   #lightsH1 {
-    font-size: 6rem;
+    font-size: 5rem;
   }
 
   #TitleH1 {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   h2 {
     font-size: 3rem;
+  }
+
+  h3 {
+    font-size: 2rem;
   }
 
 
